--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,5 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Release Encaludus
 
 on:
   workflow_dispatch:
@@ -21,12 +19,12 @@ jobs:
       uses: actions/setup-go@v2.1.3
       with:
         go-version: 1.15.5
-    - run: ./build-backend
+    - run: ./build-backend.sh
     - name: Build Frontend
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: ./build-frontend
+    - run: ./build-frontend.sh
     - name: Build 
       uses: actions/setup-node@v1
     - run: |
