--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,8 @@ jobs:
     - name: Build 
       uses: actions/setup-node@v1
     - run: |
-         npm run compile
-         npm run make     
+         yarn install
+         yarn run compile
+         yarn run make     
       working-directory: ./encaludus
 
