--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,9 @@ jobs:
       uses: actions/setup-go@v2.1.3
       with:
         go-version: 1.15.5
-    - run: ./build-backend.sh
+    - run: go build -ldflags "${LD_FLAGS}" -o bin/bridge github.com/openshift/console/cmd/bridge
+      env:
+        GOFLAGS: '-mod=vendor'
     - name: Cache node modules
       uses: actions/cache@v2
       env:
@@ -36,7 +38,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: ./build-frontend.sh
+    - run: | 
+          yarn install 
+          yarn run build
+      working-directory: ./front-end
     - name: Build 
       uses: actions/setup-node@v1
     - run: |
