--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/setup-go@v2.1.3
       with:
         go-version: 1.15.5
-    - run: go build -ldflags "${LD_FLAGS}" -o bin/bridge github.com/openshift/console/cmd/bridge
+    - run: go build -o bin/bridge github.com/openshift/console/cmd/bridge
       env:
         GOFLAGS: '-mod=vendor'
     - name: Cache node modules
