--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,14 +5,49 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  
+  build-frontend:
+    
+    runs-on: [ubuntu-latest]
+    strategy:
+      matrix:
+        node-version: [12.x]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Cache node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+      - name: Build Frontend
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - run: | 
+            yarn install 
+            yarn run build
+        working-directory: ./frontend
+      - name: Upload dist
+        uses: actions/upload-artifact@v2
+        with:
+          name: frontend-dist
+          path: ./frontend/public/dist
+
+  build-platform:
 
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
         node-version: [12.x]
-
     steps:
     - uses: actions/checkout@v2
     - name: Build backend
@@ -22,26 +57,11 @@ jobs:
     - run: go build -o bin/bridge github.com/openshift/console/cmd/bridge
       env:
         GOFLAGS: '-mod=vendor'
-    - name: Cache node modules
-      uses: actions/cache@v2
-      env:
-        cache-name: cache-node-modules
+    - name: Restore frontend-dist
+      uses: actions/download-artifact@v2
       with:
-        # npm cache files are stored in `~/.npm` on Linux/macOS
-        path: ~/.npm
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}-
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-
-    - name: Build Frontend
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: | 
-          yarn install 
-          yarn run build
-      working-directory: ./frontend
+        name: frontend-dist
+        path: ./frontend/public/dist
     - name: Build 
       uses: actions/setup-node@v1
     - run: |
