--- a/encaludus/package.json
+++ b/encaludus/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@kubernetes/client-node": "^0.13.0",
+    "electron-root-path": "^1.0.16",
     "electron-squirrel-startup": "^1.0.0"
   },
   "config": {
@@ -36,7 +37,9 @@
         {
           "name": "@electron-forge/maker-zip",
           "platforms": [
-            "darwin", "linux", "win32"
+            "darwin",
+            "linux",
+            "win32"
           ]
         }
       ],
