--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,10 @@ jobs:
       matrix:
         node-version: [12.x]
     steps:
-      - uses: actions/checkout@v2
+      - name: Get Console master
+        uses: actions/checkout@v2
+        with:
+          ref: master
       - name: Cache node modules
         uses: actions/cache@v2
         env:
