--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,14 +77,39 @@ jobs:
       working-directory: ./encaludus
     - run: yarn run make     
       working-directory: ./encaludus
-    - name: Upload zip
+    - name: Upload Linux zip
+      if: runner.os == 'Linux'
       uses: WebFreak001/deploy-nightly@v1.1.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: https://uploads.github.com/repos/gorkem/console/releases/35117499/assets{?name,label}
         release_id: 35117499
-        asset_path: ./encaludus/out/make/zip/**/*.zip
-        asset_name: encaludus-${{ matrix.os }}-$$.zip
+        asset_path: ./encaludus/out/make/zip/linux/x64/encaludus-linux-x64-0.1.0.zip
+        asset_name: encaludus-${{ runner.os }}-$$.zip
         asset_content_type: application/zip 
-        max_releases: 7 # optional, if there are more releases than this matching the asset_name, the oldest ones are going to be deleted
+        max_releases: 7 
+    - name: Upload Windows zip
+      if: runner.os == 'Windows'
+      uses: WebFreak001/deploy-nightly@v1.1.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: https://uploads.github.com/repos/gorkem/console/releases/35117499/assets{?name,label}
+        release_id: 35117499
+        asset_path: ./encaludus/out/make/zip/win32/x64/encaludus-win32-x64-0.1.0.zip
+        asset_name: encaludus-${{ runner.os }}-$$.zip
+        asset_content_type: application/zip 
+        max_releases: 7
+    - name: Upload Mac zip
+      if: runner.os == 'macOS'
+      uses: WebFreak001/deploy-nightly@v1.1.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: https://uploads.github.com/repos/gorkem/console/releases/35117499/assets{?name,label}
+        release_id: 35117499
+        asset_path: ./encaludus/out/make/zip/darwin/x64/encaludus-darwin-x64-0.1.0.zip
+        asset_name: encaludus-${{ runner.os }}-$$.zip
+        asset_content_type: application/zip 
+        max_releases: 7
