--- a/encaludus/package.json
+++ b/encaludus/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "@kubernetes/client-node": "^0.13.0",
     "electron-root-path": "^1.0.16",
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "electron-window-state": "^5.0.3"
   },
   "config": {
     "forge": {
